# tripping-happiness

track_mem/: CMakeLists.txt  GNUmakefile  README  all.c  geany_run_script.sh  print_electron.c  print_electron_c.d  print_ni.c  print_ni_energy.c  print_physics.c  track_mem.cc  trk.mac  vis.mac
track_mem/include/: DetectorConstruction.hh  EventAction.hh  MagneticField.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  SteppingVerbose.hh  TrackerSD.hh  geany_run_script.sh
track_mem/src/: DetectorConstruction.cc  EventAction.cc  MagneticField.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  SteppingVerbose.cc  TrackerSD.cc  geany_run_script.sh
